# pysyt

./: .readthedocs.yaml  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.rst
pysyt/: syt.py
tests/: test_all_sytx.py  test_count_sytx.py
