[tool.poetry]
name = "pysyt"
version = "0.1.0"
description = "Standard Young tableaux"
homepage = "https://github.com/stla/pysyt"
authors = ["Stéphane Laurent <laurent_step@outlook.fr>"]
documentation = "https://pysyt.readthedocs.io/en/latest/"
keywords = ["combinatorics"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = { version = "^7.2.0", optional = true }
sphinx-rtd-theme = { version = "^1.3.0", optional = true }
sphinxcontrib-napoleon = { version = "^0.7", optional = true }
sphinxcontrib-restbuilder = { version = "^0.3", optional = true }

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon", "sphinxcontrib-restbuilder"]

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
